examples/fail/semantic/struct_missing_field.bina
// EXPECT_SEMANTIC_ERROR: missing initializer for field
struct Point {
    x: float64;
    y: float64;
}

fn main() -> int {
    let p = Point { x: 1.0 };
    return 0;
}
